--- a/auth/index.html
+++ b/auth/index.html
@@ -58,7 +58,8 @@
               <div class="container-btn">
                 <div class="row">
                   <input name="login" id="login" class="btn login-btn" type="submit" value="Login" />
-                  <input name="signup" id="signup" class="btn signup-btn" type="button" value="Sign Up" onclick="displaySignUp()" />
+                  <input name="signup" id="signup" class="btn signup-btn" type="button" value="Sign Up"
+                    onclick="displaySignUp()" />
                 </div>
               </div>
             </form>
@@ -72,27 +73,32 @@
 
             <form role="form" id="formRegister">
               <div class="container-form">
-                  <div class="form-group bottom-label">
-                      <label for="inputUsername" class="label-login">Username</label>
-                      <input type="text" name="userName" class="form-control custom-form" id="inputUsername" placeholder="Enter username" autocomplete="off">
-                    </div>
-                    <div class="form-group bottom-label">
-                      <label for="inputFullName" class="label-login">Full Name</label>
-                      <input type="text" name="fullName" class="form-control custom-form" id="inputFullName" placeholder="Enter full name" autocomplete="off">
-                    </div>
+                <div class="form-group bottom-label">
+                  <label for="inputUsername" class="label-login">Username</label>
+                  <input type="text" name="userName" class="form-control custom-form" id="inputUsername"
+                    placeholder="Enter username" autocomplete="off">
+                </div>
+                <div class="form-group bottom-label">
+                  <label for="inputFullName" class="label-login">Full Name</label>
+                  <input type="text" name="fullName" class="form-control custom-form" id="inputFullName"
+                    placeholder="Enter full name" autocomplete="off">
+                </div>
                 <div class="form-group bottom-label">
                   <label for="inputEmail" class="label-login">Email address</label>
-                  <input type="email" name="email" class="form-control custom-form" id="inputEmail" placeholder="Enter email" autocomplete="off">
+                  <input type="email" name="email" class="form-control custom-form" id="inputEmail"
+                    placeholder="Enter email" autocomplete="off">
                 </div>
                 <div class="form-group bottom-label">
                   <label for="inputPassword" class="label-login">Password</label>
-                  <input type="password" name="password" class="form-control custom-form" id="exampleInputPassword" placeholder="Password">
+                  <input type="password" name="password" class="form-control custom-form" id="exampleInputPassword"
+                    placeholder="Password">
                 </div>
               </div>
               <div class="container-btn">
                 <div class="row ">
-                  <input name="signup" id="signup" class="btn signup-btn" type="submit" value="Sign Up"  />
-                  <input name="login" id="login" class="btn login-btn" type="button" value="Login" onclick="displayLogIn()"/>
+                  <input name="signup" id="signup" class="btn signup-btn" type="submit" value="Sign Up" />
+                  <input name="login" id="login" class="btn login-btn" type="button" value="Login"
+                    onclick="displayLogIn()" />
                 </div>
               </div>
             </form>
@@ -105,19 +111,22 @@
 
             <form action="#" id="formForgot">
               <div class="container-form">
-                  <div class="form-group bottom-label">
-                      <label for="inputUsername" class="label-login">Username</label>
-                      <input type="text" name="userName" class="form-control custom-form" id="inputUsername" placeholder="Enter username" autocomplete="off">
-                    </div>
+                <div class="form-group bottom-label">
+                  <label for="inputUsername" class="label-login">Username</label>
+                  <input type="text" name="userName" class="form-control custom-form" id="inputUsername"
+                    placeholder="Enter username" autocomplete="off">
+                </div>
                 <div class="form-group bottom-label">
                   <label for="inputEmail" class="label-login">Email address</label>
-                  <input type="email" name="email" class="form-control custom-form" id="inputEmail" placeholder="Enter email" autocomplete="off">
+                  <input type="email" name="email" class="form-control custom-form" id="inputEmail"
+                    placeholder="Enter email" autocomplete="off">
                 </div>
               </div>
               <div class="container-btn">
                 <div class="row ">
-                  <input name="submit" id="submit" class="btn submit-btn" type="submit" value="Submit"/>
-                  <input name="login" id="login" class="btn login-btn" type="button" value="Back to Login" onclick="displayLogIn()"/>
+                  <input name="submit" id="submit" class="btn submit-btn" type="submit" value="Submit" />
+                  <input name="login" id="login" class="btn login-btn" type="button" value="Back to Login"
+                    onclick="displayLogIn()" />
                 </div>
               </div>
             </form>
@@ -136,16 +145,12 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 
   <!-- jQuery -->
-<script src="../plugins/jquery/jquery.min.js"></script>
-<!-- Bootstrap 4 -->
-<script src="../plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-<!-- jquery-validation -->
-<script src="../plugins/jquery-validation/jquery.validate.min.js"></script>
-<script src="../plugins/jquery-validation/additional-methods.min.js"></script>
-<!-- AdminLTE App -->
-<script src="../dist/js/adminlte.min.js"></script>
-<!-- AdminLTE for demo purposes -->
-<script src="../dist/js/demo.js"></script>
+  <script src="../plugins/jquery/jquery.min.js"></script>
+
+  <!-- jquery-validation -->
+  <script src="../plugins/jquery-validation/jquery.validate.min.js"></script>
+  <script src="../plugins/jquery-validation/additional-methods.min.js"></script>
+
 
   <script>
     var login = document.getElementById("login");
@@ -155,157 +160,156 @@
     function displaySignUp() {
       login.style.display = "none";
       register.style.display = "block";
-      forgotPassword.style.display="none";
+      forgotPassword.style.display = "none";
     }
 
     function displayLogIn() {
-      login.style.display="block";
-      register.style.display="none";
-      forgotPassword.style.display="none";
+      login.style.display = "block";
+      register.style.display = "none";
+      forgotPassword.style.display = "none";
     }
 
     function displayForgotPassword() {
-      login.style.display="none";
-      register.style.display="none";
-      forgotPassword.style.display="block";
+      login.style.display = "none";
+      register.style.display = "none";
+      forgotPassword.style.display = "block";
     }
-
   </script>
 
-<script type="text/javascript">
-  $(document).ready(function () {
-    $.validator.setDefaults({
-      submitHandler: function () {
-        window.location.href = "../index.html";
-      }
+  <script type="text/javascript">
+    $(document).ready(function () {
+      $.validator.setDefaults({
+        submitHandler: function () {
+          window.location.href = "../index.html";
+        }
+      });
+      $('#loginForm').validate({
+        rules: {
+          email: {
+            required: true,
+            email: true,
+          },
+          password: {
+            required: true,
+          },
+        },
+        messages: {
+          email: {
+            required: "Please enter a email address",
+            email: "Please enter a valid email address"
+          },
+          password: {
+            required: "Please provide a password",
+          },
+        },
+        errorElement: 'span',
+        errorPlacement: function (error, element) {
+          error.addClass('invalid-feedback');
+          element.closest('.form-group').append(error);
+        },
+        highlight: function (element, errorClass, validClass) {
+          $(element).addClass('is-invalid');
+        },
+        unhighlight: function (element, errorClass, validClass) {
+          $(element).removeClass('is-invalid');
+        }
+      });
     });
-    $('#loginForm').validate({
-      rules: {
-        email: {
-          required: true,
-          email: true,
-        },
-        password: {
-          required: true,
-        },
-      },
-      messages: {
-        email: {
-          required: "Please enter a email address",
-          email: "Please enter a valid email address"
-        },
-        password: {
-          required: "Please provide a password",
-        },
-      },
-      errorElement: 'span',
-      errorPlacement: function (error, element) {
-        error.addClass('invalid-feedback');
-        element.closest('.form-group').append(error);
-      },
-      highlight: function (element, errorClass, validClass) {
-        $(element).addClass('is-invalid');
-      },
-      unhighlight: function (element, errorClass, validClass) {
-        $(element).removeClass('is-invalid');
-      }
-    });
-  });
   </script>
 
-<script type="text/javascript">
-  $(document).ready(function () {
-    $.validator.setDefaults({
-      submitHandler: function () {
-        alert( "Registration Complete!" );
-        window.location.href="../index.html";
-      }
+  <script type="text/javascript">
+    $(document).ready(function () {
+      $.validator.setDefaults({
+        submitHandler: function () {
+          alert("Registration Complete!");
+          window.location.href = "../index.html";
+        }
+      });
+      $('#formRegister').validate({
+        rules: {
+          userName: {
+            required: true
+          },
+          fullName: {
+            required: true
+          },
+          email: {
+            required: true,
+            email: true,
+          },
+          password: {
+            required: true,
+            minlength: 8
+          },
+        },
+        messages: {
+          userName: {
+            required: "Please enter your username",
+          },
+          email: {
+            required: "Please enter a email address",
+            email: "Please enter a valid email address"
+          },
+          password: {
+            required: "Please provide a password",
+            minlength: "Your password must be at least 8 characters long"
+          },
+        },
+        errorElement: 'span',
+        errorPlacement: function (error, element) {
+          error.addClass('invalid-feedback');
+          element.closest('.form-group').append(error);
+        },
+        highlight: function (element, errorClass, validClass) {
+          $(element).addClass('is-invalid');
+        },
+        unhighlight: function (element, errorClass, validClass) {
+          $(element).removeClass('is-invalid');
+        }
+      });
     });
-    $('#formRegister').validate({
-      rules: {
-        userName: {
-          required: true
-        },
-        fullName: {
-          required: true
-        },
-        email: {
-          required: true,
-          email: true,
-        },
-        password: {
-          required: true,
-          minlength: 8
-        },
-      },
-      messages: {
-        userName: {
-          required: "Please enter your username",
-        },
-        email: {
-          required: "Please enter a email address",
-          email: "Please enter a valid email address"
-        },
-        password: {
-          required: "Please provide a password",
-          minlength: "Your password must be at least 8 characters long"
-        },
-      },
-      errorElement: 'span',
-      errorPlacement: function (error, element) {
-        error.addClass('invalid-feedback');
-        element.closest('.form-group').append(error);
-      },
-      highlight: function (element, errorClass, validClass) {
-        $(element).addClass('is-invalid');
-      },
-      unhighlight: function (element, errorClass, validClass) {
-        $(element).removeClass('is-invalid');
-      }
-    });
-  });
   </script>
 
-<script type="text/javascript">
-  $(document).ready(function () {
-    $.validator.setDefaults({
-      submitHandler: function () {
-        alert( "Check your email!" );
-        displayLogIn();
-      }
+  <script type="text/javascript">
+    $(document).ready(function () {
+      $.validator.setDefaults({
+        submitHandler: function () {
+          alert("Check your email!");
+          displayLogIn();
+        }
+      });
+      $('#formForgot').validate({
+        rules: {
+          userName: {
+            required: true
+          },
+          email: {
+            required: true,
+            email: true,
+          },
+        },
+        messages: {
+          userName: {
+            required: "Please enter your username",
+          },
+          email: {
+            required: "Please enter a email address",
+            email: "Please enter a valid email address"
+          },
+        },
+        errorElement: 'span',
+        errorPlacement: function (error, element) {
+          error.addClass('invalid-feedback');
+          element.closest('.form-group').append(error);
+        },
+        highlight: function (element, errorClass, validClass) {
+          $(element).addClass('is-invalid');
+        },
+        unhighlight: function (element, errorClass, validClass) {
+          $(element).removeClass('is-invalid');
+        }
+      });
     });
-    $('#formForgot').validate({
-      rules: {
-        userName: {
-          required: true
-        },
-        email: {
-          required: true,
-          email: true,
-        },
-      },
-      messages: {
-        userName: {
-          required: "Please enter your username",
-        },
-        email: {
-          required: "Please enter a email address",
-          email: "Please enter a valid email address"
-        },
-      },
-      errorElement: 'span',
-      errorPlacement: function (error, element) {
-        error.addClass('invalid-feedback');
-        element.closest('.form-group').append(error);
-      },
-      highlight: function (element, errorClass, validClass) {
-        $(element).addClass('is-invalid');
-      },
-      unhighlight: function (element, errorClass, validClass) {
-        $(element).removeClass('is-invalid');
-      }
-    });
-  });
   </script>
 
 </body>
