--- a/detail.html
+++ b/detail.html
@@ -18,6 +18,12 @@
     <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 
+  <!-- daterange picker -->
+  <link rel="stylesheet" href="../../plugins/daterangepicker/daterangepicker.css">
+  <!-- Tempusdominus Bbootstrap 4 -->
+  <link rel="stylesheet" href="../../plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css">
+  
+
     <link rel="stylesheet" type="text/css" href="./plugins/slick/slick.css">
     <link rel="stylesheet" type="text/css" href="./plugins/slick/slick-theme.css">
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -174,7 +180,6 @@
       <!-- /.content -->
     </div>
   </div>
-
     <!-- /.modal -->
       <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabesl"
         aria-hidden="true">
@@ -233,7 +238,7 @@
       </div>
       <div class="modal fade" id="EditModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabesl"
         aria-hidden="true">
-        <div class="modal-dialog" role="document">
+        <div class="modal-dialog modal-xl" role="document">
           <div class="modal-content" id="edit-module">
             <div class="modal-header">
               <h5 class="modal-title" id="exampleModalLabel">Edit Data</h5>
@@ -243,52 +248,63 @@
             </div>
             <div class="modal-body">
               <div class="row">
-                <div class="col-sm-2">
-                  <p class="title-module">Url Image</p>
+                <div class="col-lg-2">
+                  <label class="title-module">Url Image</label>
                 </div>
-                <div class="col-sm-10">
+                <div class="col-lg-10">
                   <input type="text" id="url" name="url" class="form-control" placeholder="/assets/background.png">
                 </div>
               </div>
               <hr class="divider">
               <div class="row">
-                <div class="col-sm-2">
-                  <p class="title-module">Book Tittle</p>
+                <div class="col-lg-2">
+                  <label class="title-module">Book Tittle</label>
                 </div>
-                <div class="col-sm-10">
+                <div class="col-lg-10">
                   <input type="text" id="title" name="title" class="form-control" placeholder="Gunung">
                 </div>
               </div>
               <hr class="divider">
               <div class="row">
-                <div class="col-sm-2">
-                  <p class="title-module">Date</p>
+                <div class="col-lg-2">
+                <label class="title-module">Date:</label>
                 </div>
-                <div class="col-sm-10">
-                  <input type="text" id="date" name="date" class="form-control" readonly placeholder="10 November 2020">
-                </div>
-              </div>
-              <hr class="divider">
-              <div class="row">
-                <div class="col-sm-2">
-                  <p class="title-module">Category</p>
-                </div>
-                <div class="col-sm-10">
-                  <input type="text" id="category" name="category" class="form-control" readonly placeholder="Novel">
+                <div class="col-lg-10">
+                    <div class="input-group date" id="datetimepicker4" data-target-input="nearest">
+                      <input type="text" class="form-control datetimepicker-input" data-target="#datetimepicker4"/>
+                      <div class="input-group-append" data-target="#datetimepicker4" data-toggle="datetimepicker">
+                          <div class="input-group-text"><i class="fa fa-calendar"></i></div>
+                      </div>
+                  </div>
                 </div>
               </div>
               <hr class="divider">
               <div class="row">
-                <div class="col-sm-2">
-                    <p class="title-module">Description</p>
+                <div class="col-lg-2">
+                  <label class="title-module">Category</label>
+                </div>
+                <div class="col-lg-4">
+                  <div class="form-group">
+                    <select class="form-control">
+                      <option value="" >Choose Category</option>
+                      <option value="Novel" >Novel</option>
+                      <option value="Comic Book" >Comic Book</option>
+                      <option value="Detective and Mystery" >Detective and Mystery</option>
+                      <option value="Historical Fiction" >Historical Fiction</option>
+                      <option value="Horror" >Horror</option>
+                      <option value="literary Fiction" >literary Fiction</option>
+                    </select>
+                  </div>
+                </div>
+              </div>
+              <hr class="divider">
+              <div class="row">
+                <div class="col-lg-2">
+                    <label class="title-module">Description</label>
                 </div>
                 <hr class="divider">
-                <div class="col-sm-10">
-                <!-- <textarea name="txtcomment" id="txtcomment" cols="50" rows="5" placeholder="Type Here"></textarea> -->
-                <textarea name="txtcomment" id="txtcomment" cols="50" rows="5" placeholder="Type Here"></textarea>
-                <script>
-                        CKEDITOR.replace( 'txtcomment' );
-                </script>  
+                <div class="col-lg-10">
+                  <textarea name="txtcomment" class="ckeditor" cols="50" rows="5" placeholder="Type Here"></textarea>
                 </div>
               </div>
             </div>
@@ -312,11 +328,31 @@
   <!-- AdminLTE App -->
   <script src="./dist/js/adminlte.min.js"></script>
   <!-- AdminLTE for demo purposes -->
-  <script src="../../dist/js/demo.js"></script>
+  <script src="./dist/js/demo.js"></script>
   <script src="js.js" type="text/javascript"></script>
   <!-- Ckeditor -->
   <script src="//cdn.ckeditor.com/4.15.1/standard/ckeditor.js"></script>
+  <!-- date-range-picker -->
+  <script src="./plugins/daterangepicker/daterangepicker.js"></script>
 
+<!-- InputMask -->
+<script src="../../plugins/moment/moment.min.js"></script>
+<script src="../../plugins/inputmask/min/jquery.inputmask.bundle.min.js"></script>
+<!-- date-range-picker -->
+<script src="../../plugins/daterangepicker/daterangepicker.js"></script>
+<!-- Tempusdominus Bootstrap 4 -->
+<script src="../../plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
+
+      <script>
+
+$(function () {
+                $('#datetimepicker4').datetimepicker({
+                    format: 'L'
+                });
+            });
+
+        
+      </script>
 </body>
 
 </html>
