--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="./home/style.css">
     <!-- Flickity -->
     <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
+    <link rel="stylesheet" type="text/css" href="extra_css.css">
 </head>
 
 <body class="hold-transition sidebar-mini layout-fixed">
@@ -70,11 +71,13 @@
                     <input id="input-search" type="text" class="form-control" placeholder="Search Book">
                   </div>
             </form>
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
-                </li>
-            </ul>
+            <div class="toggle-navbar-nav" >
+                <ul class="navbar-nav toggle-navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
+                    </li>
+                </ul>
+            </div>
         </nav>
         <!-- /.navbar -->
         <div w3-include-html="include_sidebar.html"></div>
@@ -146,7 +149,7 @@
                         </div>
                         <div class="col-12">
                             <div class="filter-container p-0 row">
-                                <div class="filtr-item col-sm-4 list-book" data-category="1" data-sort="white sample">
+                                <div class="filtr-item col-sm-4 list-book">
                                     <a href="detail.html">
                                         <img src="./assets/books/brief-answer-to-the-big-questions.jpg"
                                             class="img-fluid img-book" alt="white sample" />
@@ -160,7 +163,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="filtr-item col-sm-4 list-book" data-category="1" data-sort="white sample">
+                                <div class="filtr-item col-sm-4 list-book">
                                     <a href="detail.html">
                                         <img src="./assets/books/dilan.jpg" class="img-fluid img-book"
                                             alt="white sample" />
@@ -174,7 +177,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="filtr-item col-sm-4 list-book" data-category="1" data-sort="white sample">
+                                <div class="filtr-item col-sm-4 list-book">
                                     <a href="detail.html">
                                         <img src="./assets/books/harry-potter.jpg" class="img-fluid img-book"
                                             alt="white sample" />
@@ -188,7 +191,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="filtr-item col-sm-4 list-book" data-category="1" data-sort="white sample">
+                                <div class="filtr-item col-sm-4 list-book">
                                     <a href="detail.html">
                                         <img src="./assets/books/fantastic-beasts.jpg" class="img-fluid img-book"
                                             alt="white sample" />
@@ -202,7 +205,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="filtr-item col-sm-4 list-book" data-category="1" data-sort="white sample">
+                                <div class="filtr-item col-sm-4 list-book">
                                     <a href="detail.html">
                                         <img src="./assets/books/brief-answer-to-the-big-questions.jpg"
                                             class="img-fluid img-book" alt="white sample" />
@@ -216,7 +219,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="filtr-item col-sm-4 list-book" data-category="1" data-sort="white sample">
+                                <div class="filtr-item col-sm-4 list-book">
                                     <a href="detail.html">
                                         <img src="./assets/books/dilan.jpg" class="img-fluid img-book"
                                             alt="white sample" />
@@ -230,7 +233,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="filtr-item col-sm-4 list-book" data-category="1" data-sort="white sample">
+                                <div class="filtr-item col-sm-4 list-book">
                                     <a href="detail.html">
                                         <img src="./assets/books/harry-potter.jpg" class="img-fluid img-book"
                                             alt="white sample" />
@@ -244,7 +247,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="filtr-item col-sm-4 list-book" data-category="1" data-sort="white sample">
+                                <div class="filtr-item col-sm-4 list-book">
                                     <a href="detail.html">
                                         <img src="./assets/books/fantastic-beasts.jpg" class="img-fluid img-book"
                                             alt="white sample" />
@@ -258,6 +261,7 @@
                                         </div>
                                     </div>
                                 </div>
+                                <div class="books-nf" style="display:none;" ><h3 class="book-not-found" >Oops, Book Not Found</h3></div>
                             </div>
                         </div>
                     </div>
