--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
               <div class="main-carousel">
                 <!-- Flickity HTML init -->
                 <div class="carousel"
-                data-flickity='{ "wrapAround": true, "lazyLoad": true }'>
+                data-flickity='{ "wrapAround": true, "lazyLoad": true, "pageDots": false }'>
                 <div class="carousel-cell" style="background-image: url('./assets/books/uburlembur.png');">
                   <div class="carousel-info">
                     <div class="carousel-text">
