--- a/detail.html
+++ b/detail.html
@@ -23,8 +23,6 @@
     <!-- Tempusdominus Bbootstrap 4 -->
     <link rel="stylesheet" href="./plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css">
 
-
-
     <link rel="stylesheet" type="text/css" href="./plugins/slick/slick.css">
     <link rel="stylesheet" type="text/css" href="./plugins/slick/slick-theme.css">
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -337,7 +335,7 @@
               </div>
               <div class="col-lg-4">
                   <div class="input-group date" id="datetimepicker4" data-target-input="nearest">
-                    <input type="text" name="date" class="form-control datetimepicker-input" data-target="#datetimepicker4"/>
+                    <input type="text" name="date" readonly class="form-control datetimepicker-input" data-target="#datetimepicker4"/>
                     <div class="input-group-append" data-target="#datetimepicker4" data-toggle="datetimepicker">
                         <div class="input-group-text"><i class="fa fa-calendar"></i></div>
                     </div>
@@ -462,25 +460,6 @@
   <script src="./plugins/daterangepicker/daterangepicker.js"></script>
   <!-- Tempusdominus Bootstrap 4 -->
   <script src="./plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
-  <script>	    
-    function clickstatus(){      
-      var status = document.getElementById("button_borrow").value;
-      var borrowedbtn = document.getElementById("button_borrow");
-      if (status == "borrowed") {
-    sessionStorage.setItem("lastname", "Borrow");
-    document.getElementById("button_borrow").value="borrow";
-    document.getElementById("button_borrow").innerHTML = sessionStorage.getItem("lastname");
-    } else{
-      if (document.getElementById("returndate").value !== "" && document.getElementById("borrowdate").value !== "" ) {
-    sessionStorage.setItem("lastname", "Borrowed");
-    document.getElementById("button_borrow").value="borrowed";
-    document.getElementById("button_borrow").innerHTML = sessionStorage.getItem("lastname");
-    $('#BorrowModal').modal('hide');
-    $('#BerhasilModal3').modal('show');   
-  }    
-    } 
-      }
-    </script>
   <script type="text/javascript" src="modal.js"></script>
 </body>
 
