--- a/include_sidebar.html
+++ b/include_sidebar.html
@@ -22,10 +22,11 @@
           <!-- Sidebar user panel (optional) -->
           <div class="user-panel mt-3 pb-3 mb-3 d-flex">
             <div class="image my-center">
-              <img src="./assets/media/user/profile.png" class="img-circle elevation-2 profile-img-custom" alt="User Image">
+              <img src="./assets/media/user/profile.png" class="img-circle elevation-2 profile-img-custom"
+                alt="User Image">
             </div>
             <div class="info">
-              <a href="#" class="d-block user-name">Niki Zefanya</a>
+              <a href="profile.html" class="d-block user-name">Niki Zefanya</a>
             </div>
           </div>
 
@@ -34,6 +35,14 @@
             <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
               <!-- Add icons to the links using the .nav-icon class
              with font-awesome or any other icon font library -->
+             <li class="nav-item">
+              <a href="profile.html" class="nav-link">
+                <i class="nav-icon fas fa-user"></i>
+                <p>
+                  Profile
+                </p>
+              </a>
+            </li>
               <li class="nav-item">
                 <a href="index.html" class="nav-link active" id="index">
                   <i class="nav-icon fas fa-book"></i>
@@ -50,7 +59,67 @@
                   </p>
                 </a>
               </li>
-
+              <li class="nav-item has-treeview menu">
+                <a href="#" class="nav-link">
+                  <i class="nav-icon fas fa-list-ul"></i>
+                  <p>
+                    Process Management
+                    <i class="fas fa-angle-left right"></i>
+                  </p>
+                </a>
+                <ul class="nav nav-treeview">
+                  <li class="nav-item">
+                    <a href="#" class="nav-link">
+                      <i class="fas fa-users nav-icon"></i>
+                      <p>User Management</p>
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="#" class="nav-link">
+                      <i class="fas fa-book nav-icon"></i>
+                      <p>Book Management</p>
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="#" class="nav-link">
+                      <i class="far fa-hourglass nav-icon"></i>
+                      <p>Rent Management </p>
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="#" class="nav-link">
+                      <i class="fas fa-gavel nav-icon"></i>
+                      <p>Fine Management</p>
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="#" class="nav-link">
+                      <i class="fas fa-th nav-icon"></i>
+                      <p>Category Mangement</p>
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="#" class="nav-link">
+                      <i class="far fa-images nav-icon"></i>
+                      <p>Slide Show Management</p>
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="#" class="nav-link">
+                      <i class="fa fa-hands-helping nav-icon"></i>
+                      <p>Donation Management</p>
+                    </a>
+                  </li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a href="#" class="nav-link">
+                  <i class="nav-icon fas fa-people-carry"></i>
+                  <p>
+                    Donation
+                  </p>
+                </a>
+              </li>
               <!-- if login -->
               <li class="nav-item">
                 <a href="#" class="nav-link" onclick="showModal('add')">
