--- a/include_sidebar.html
+++ b/include_sidebar.html
@@ -93,13 +93,13 @@
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a href="#" class="nav-link">
+                    <a href="category_management.html" class="nav-link">
                       <i class="fas fa-th nav-icon"></i>
                       <p>Category Mangement</p>
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a href="#" class="nav-link">
+                    <a href="slideshow_management.html" class="nav-link">
                       <i class="far fa-images nav-icon"></i>
                       <p>Slide Show Management</p>
                     </a>
