--- a/include_sidebar.html
+++ b/include_sidebar.html
@@ -27,6 +27,10 @@
             </div>
             <div class="info">
               <a href="profile.html" class="d-block user-name">Niki Zefanya</a>
+              <ul id="topup">
+                <li>Rp  <label id="saldo" value="0">50000</label></li>
+                <li><a href="top_up.html" class="d-block user-name">Topup</a></li>
+              </ul>
             </div>
           </div>
 
